Nuevo modelo adoptado (Mal uso de EPLUtils)

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,6 +35,7 @@ file.reference.commons-compiler-3.0.7.jar=C:\\Users\\Carlos\\Desktop\\TFG\\Doc d
 file.reference.esper-7.1.0.jar=C:\\Users\\Carlos\\Desktop\\TFG\\Doc de CEP\\esper-7.1.0\\esper-7.1.0.jar
 file.reference.janino-3.0.7.jar=C:\\Users\\Carlos\\Desktop\\TFG\\Doc de CEP\\esper-7.1.0\\Aditional libraries\\janino-3.0.7.jar
 file.reference.slf4j-api-1.7.25.jar=C:\\Users\\Carlos\\Desktop\\TFG\\Doc de CEP\\esper-7.1.0\\Aditional libraries\\slf4j-api-1.7.25.jar
+file.reference.spring-2.5.6.jar=C:\\Users\\Carlos\\Desktop\\TFG\\Doc de CEP\\esper-7.1.0\\Aditional libraries\\spring-2.5.6.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -43,7 +44,8 @@ javac.classpath=\
     ${file.reference.cglib-nodep-3.2.7.jar}:\
     ${file.reference.commons-compiler-3.0.7.jar}:\
     ${file.reference.janino-3.0.7.jar}:\
-    ${file.reference.slf4j-api-1.7.25.jar}
+    ${file.reference.slf4j-api-1.7.25.jar}:\
+    ${file.reference.spring-2.5.6.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
