--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,23 +29,23 @@ dist.jar=${dist.dir}/AnalisisRutas.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.antlr4-runtime-4.7.jar=C:\\Users\\Carlos\\Desktop\\TFG\\Doc de CEP\\esper-7.1.0\\Aditional libraries\\antlr4-runtime-4.7.jar
-file.reference.cglib-nodep-3.2.7.jar=C:\\Users\\Carlos\\Desktop\\TFG\\Doc de CEP\\esper-7.1.0\\Aditional libraries\\cglib-nodep-3.2.7.jar
-file.reference.commons-compiler-3.0.7.jar=C:\\Users\\Carlos\\Desktop\\TFG\\Doc de CEP\\esper-7.1.0\\Aditional libraries\\commons-compiler-3.0.7.jar
-file.reference.esper-7.1.0.jar=C:\\Users\\Carlos\\Desktop\\TFG\\Doc de CEP\\esper-7.1.0\\esper-7.1.0.jar
-file.reference.janino-3.0.7.jar=C:\\Users\\Carlos\\Desktop\\TFG\\Doc de CEP\\esper-7.1.0\\Aditional libraries\\janino-3.0.7.jar
-file.reference.slf4j-api-1.7.25.jar=C:\\Users\\Carlos\\Desktop\\TFG\\Doc de CEP\\esper-7.1.0\\Aditional libraries\\slf4j-api-1.7.25.jar
-file.reference.spring-2.5.6.jar=C:\\Users\\Carlos\\Desktop\\TFG\\Doc de CEP\\esper-7.1.0\\Aditional libraries\\spring-2.5.6.jar
+file.reference.antlr4-runtime-4.7_.jar=files\\libreries\\antlr4-runtime-4.7 .jar
+file.reference.cglib-nodep-3.2.7_.jar=files\\libreries\\cglib-nodep-3.2.7 .jar
+file.reference.commons-compiler-3.0.7_.jar=files\\libreries\\commons-compiler-3.0.7 .jar
+file.reference.esper-7.1.0.jar=files\\libreries\\esper-7.1.0.jar
+file.reference.janino-3.0.7_.jar=files\\libreries\\janino-3.0.7 .jar
+file.reference.slf4j-api-1.7.25.jar=files\\libreries\\slf4j-api-1.7.25.jar
+file.reference.spring-2.5.6_.jar=files\\libreries\\spring-2.5.6 .jar
 includes=**
 jar.compress=false
 javac.classpath=\
+    ${file.reference.antlr4-runtime-4.7_.jar}:\
+    ${file.reference.cglib-nodep-3.2.7_.jar}:\
+    ${file.reference.commons-compiler-3.0.7_.jar}:\
     ${file.reference.esper-7.1.0.jar}:\
-    ${file.reference.antlr4-runtime-4.7.jar}:\
-    ${file.reference.cglib-nodep-3.2.7.jar}:\
-    ${file.reference.commons-compiler-3.0.7.jar}:\
-    ${file.reference.janino-3.0.7.jar}:\
+    ${file.reference.janino-3.0.7_.jar}:\
     ${file.reference.slf4j-api-1.7.25.jar}:\
-    ${file.reference.spring-2.5.6.jar}
+    ${file.reference.spring-2.5.6_.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
