--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,9 +36,9 @@ file.reference.cglib-nodep-3.2.7_.jar=files\\libreries\\cglib-nodep-3.2.7 .jar
 file.reference.commons-compiler-3.0.7.jar=files\\libraries\\commons-compiler-3.0.7.jar
 file.reference.commons-compiler-3.0.7_.jar=files\\libreries\\commons-compiler-3.0.7 .jar
 file.reference.esper-7.1.0.jar=files\\libreries\\esper-7.1.0.jar
-file.reference.esper-7.1.0.jar-1=files\\libraries\\esper-7.1.0.jar
 file.reference.janino-3.0.7.jar=files\\libraries\\janino-3.0.7.jar
 file.reference.janino-3.0.7_.jar=files\\libreries\\janino-3.0.7 .jar
+file.reference.LiveEditMapViewerJ.jar=C:\\Users\\CarlosAA\\Desktop\\LiveEditMapViewerJ.jar
 file.reference.slf4j-api-1.7.25-sources.jar=files\\libraries\\slf4j-api-1.7.25-sources.jar
 file.reference.slf4j-api-1.7.25.jar=files\\libreries\\slf4j-api-1.7.25.jar
 file.reference.slf4j-api-1.7.25.jar-1=files\\libraries\\slf4j-api-1.7.25.jar
@@ -57,11 +57,11 @@ javac.classpath=\
     ${file.reference.antlr4-runtime-4.7.jar}:\
     ${file.reference.cglib-nodep-3.2.7.jar}:\
     ${file.reference.commons-compiler-3.0.7.jar}:\
-    ${file.reference.esper-7.1.0.jar-1}:\
     ${file.reference.janino-3.0.7.jar}:\
     ${file.reference.slf4j-api-1.7.25-sources.jar}:\
     ${file.reference.slf4j-api-1.7.25.jar-1}:\
-    ${file.reference.spring-2.5.6.jar}
+    ${file.reference.spring-2.5.6.jar}:\
+    ${file.reference.LiveEditMapViewerJ.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
