--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,27 +29,31 @@ dist.jar=${dist.dir}/AnalisisRutas.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.antlr4-runtime-4.7.jar-1=libraries\\antlr4-runtime-4.7.jar
-file.reference.cglib-nodep-3.2.7.jar-1=libraries\\cglib-nodep-3.2.7.jar
-file.reference.commons-compiler-3.0.7.jar-1=libraries\\commons-compiler-3.0.7.jar
-file.reference.esper-7.1.0.jar-1=libraries\\esper-7.1.0.jar
-file.reference.janino-3.0.7.jar-1=libraries\\janino-3.0.7.jar
-file.reference.LiveEditMapViewerJ.jar-1=libraries\\LiveEditMapViewerJ.jar
-file.reference.slf4j-api-1.7.25-sources.jar-1=libraries\\slf4j-api-1.7.25-sources.jar
-file.reference.slf4j-api-1.7.25.jar-2=libraries\\slf4j-api-1.7.25.jar
-file.reference.spring-2.5.6.jar-1=libraries\\spring-2.5.6.jar
+file.reference.antlr4-runtime-4.7.jar=libraries\\antlr4-runtime-4.7.jar
+file.reference.cglib-nodep-3.2.7.jar=libraries\\cglib-nodep-3.2.7.jar
+file.reference.commons-compiler-3.0.7.jar=libraries\\commons-compiler-3.0.7.jar
+file.reference.esper-7.1.0.jar=libraries\\esper-7.1.0.jar
+file.reference.janino-3.0.7.jar=libraries\\janino-3.0.7.jar
+file.reference.JMapViewer.jar=libraries\\JMapViewer.jar
+file.reference.LiveEditMapViewerJ.jar=libraries\\LiveEditMapViewerJ.jar
+file.reference.osmosis-core-0.43-RELEASE.jar=libraries\\osmosis-core-0.43-RELEASE.jar
+file.reference.slf4j-api-1.7.25-sources.jar=libraries\\slf4j-api-1.7.25-sources.jar
+file.reference.slf4j-api-1.7.25.jar=libraries\\slf4j-api-1.7.25.jar
+file.reference.spring-2.5.6.jar=libraries\\spring-2.5.6.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.LiveEditMapViewerJ.jar-1}:\
-    ${file.reference.antlr4-runtime-4.7.jar-1}:\
-    ${file.reference.cglib-nodep-3.2.7.jar-1}:\
-    ${file.reference.commons-compiler-3.0.7.jar-1}:\
-    ${file.reference.esper-7.1.0.jar-1}:\
-    ${file.reference.janino-3.0.7.jar-1}:\
-    ${file.reference.slf4j-api-1.7.25-sources.jar-1}:\
-    ${file.reference.slf4j-api-1.7.25.jar-2}:\
-    ${file.reference.spring-2.5.6.jar-1}
+    ${file.reference.JMapViewer.jar}:\
+    ${file.reference.LiveEditMapViewerJ.jar}:\
+    ${file.reference.antlr4-runtime-4.7.jar}:\
+    ${file.reference.cglib-nodep-3.2.7.jar}:\
+    ${file.reference.commons-compiler-3.0.7.jar}:\
+    ${file.reference.esper-7.1.0.jar}:\
+    ${file.reference.janino-3.0.7.jar}:\
+    ${file.reference.osmosis-core-0.43-RELEASE.jar}:\
+    ${file.reference.slf4j-api-1.7.25-sources.jar}:\
+    ${file.reference.slf4j-api-1.7.25.jar}:\
+    ${file.reference.spring-2.5.6.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
