--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -47,13 +47,13 @@ javac.classpath=\
     ${file.reference.LiveEditMapViewerJ.jar}:\
     ${file.reference.antlr4-runtime-4.7.jar}:\
     ${file.reference.cglib-nodep-3.2.7.jar}:\
-    ${file.reference.commons-compiler-3.0.7.jar}:\
     ${file.reference.esper-7.1.0.jar}:\
     ${file.reference.janino-3.0.7.jar}:\
     ${file.reference.osmosis-core-0.43-RELEASE.jar}:\
     ${file.reference.slf4j-api-1.7.25-sources.jar}:\
     ${file.reference.slf4j-api-1.7.25.jar}:\
-    ${file.reference.spring-2.5.6.jar}
+    ${file.reference.spring-2.5.6.jar}:\
+    ${file.reference.commons-compiler-3.0.7.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
